[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://InteriorTesla.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Mapa/Interiores/MapaMinigameEngenhariaSoftware/Map014.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Personagens/Recrutadora Personagem.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Interface/Dialogo/icone_E(2).png" type="Texture" id=5]
[ext_resource path="res://Scenes/RecrutadoraM.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.7786, 13.3497 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 16.6552 )

[node name="1andarApple" type="Node2D"]

[node name="InteriorTesla" type="Sprite" parent="."]
scale = Vector2( 7.135, 6.108 )
texture = ExtResource( 3 )
script = ExtResource( 2 )

[node name="TerreoTesla" type="Area2D" parent="InteriorTesla"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteriorTesla/TerreoTesla"]
position = Vector2( 0.420462, -143.255 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="InteriorTesla"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteriorTesla/Area2D"]
position = Vector2( 205.326, -110.555 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1273, -702 )

[node name="MentorInterectionArea" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="MentorInterationc" type="CollisionPolygon2D" parent="MentorInterectionArea"]
position = Vector2( 1373, 227 )
scale = Vector2( 3.10644, 3.25947 )
polygon = PoolVector2Array( -37.3418, -125.787, -275.879, -122.413, -274.269, 72.0976, -37.3418, 78.8472 )

[node name="EButton" type="Sprite" parent="MentorInterectionArea"]
position = Vector2( 898.5, -21.7196 )
scale = Vector2( 0.279244, 0.252296 )
texture = ExtResource( 5 )

[node name="Recrutadora" type="Sprite" parent="."]
position = Vector2( 896.5, 170.28 )
scale = Vector2( 0.319444, 0.23374 )
texture = ExtResource( 4 )

[connection signal="body_entered" from="InteriorTesla/TerreoTesla" to="InteriorTesla" method="_on_TerreoTesla_body_entered"]
[connection signal="body_entered" from="InteriorTesla/Area2D" to="InteriorTesla" method="_on_Area2D_body_entered"]
